[gd_scene load_steps=13 format=2]

[ext_resource path="res://ui/stylized_shape/Rectangle.tscn" type="PackedScene" id=1]
[ext_resource path="res://miscellaneous/fonts/dynamic_fonts/body_2.tres" type="DynamicFont" id=2]
[ext_resource path="res://miscellaneous/fonts/dynamic_fonts/body_1.tres" type="DynamicFont" id=3]
[ext_resource path="res://ui/components/NewDeckPopUp/components/OkButton/OkButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/components/NewDeckPopUp/NewDeckPopUp.gd" type="Script" id=5]
[ext_resource path="res://ui/components/MouseDetector/MouseDetector.tscn" type="PackedScene" id=6]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="Animation" id=4]
resource_name = "HIDE"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:showed")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pivot:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Pivot:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:showed")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=6]
resource_name = "SHOW"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:showed")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="NewDeckPopUP" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -248.0
margin_top = -62.0
margin_right = 248.0
margin_bottom = 62.0
rect_min_size = Vector2( 496, 124 )
script = ExtResource( 5 )

[node name="MouseDetector" parent="." instance=ExtResource( 6 )]
rect_min_size = Vector2( 496, 124 )

[node name="Pivot" type="Position2D" parent="."]
position = Vector2( 248, 62 )

[node name="Style" type="Control" parent="Pivot"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -248.0
margin_top = -62.0
margin_right = 248.0
margin_bottom = 62.0

[node name="BackgroundContainer" parent="Pivot/Style" instance=ExtResource( 1 )]
background_color = "DARK"

[node name="LineContainer" parent="Pivot/Style" instance=ExtResource( 1 )]
margin_left = 24.0
margin_top = 48.0
margin_right = -96.0
margin_bottom = -16.0
rect_min_size = Vector2( 376, 60 )
background_color = "SECONDARY"

[node name="MarginContainer" type="MarginContainer" parent="Pivot"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -248.0
margin_top = -62.0
margin_right = 248.0
margin_bottom = 62.0
custom_constants/margin_right = 24
custom_constants/margin_top = 16
custom_constants/margin_left = 24
custom_constants/margin_bottom = 16

[node name="Layout" type="VBoxContainer" parent="Pivot/MarginContainer"]
margin_left = 24.0
margin_top = 16.0
margin_right = 472.0
margin_bottom = 108.0
custom_constants/separation = 0

[node name="Title" type="Label" parent="Pivot/MarginContainer/Layout"]
margin_right = 448.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Nueva unidad:"
valign = 1

[node name="Content" type="HBoxContainer" parent="Pivot/MarginContainer/Layout"]
margin_top = 32.0
margin_right = 448.0
margin_bottom = 92.0
rect_min_size = Vector2( 0, 60 )
custom_constants/separation = 12

[node name="NewTitle" type="LineEdit" parent="Pivot/MarginContainer/Layout/Content"]
margin_right = 376.0
margin_bottom = 60.0
rect_min_size = Vector2( 376, 60 )
custom_colors/selection_color = Color( 0.172549, 0.172549, 0.172549, 1 )
custom_colors/cursor_color = Color( 0.172549, 0.172549, 0.172549, 1 )
custom_colors/clear_button_color_pressed = Color( 0.172549, 0.172549, 0.172549, 1 )
custom_colors/font_color_selected = Color( 0.172549, 0.172549, 0.172549, 1 )
custom_colors/font_color = Color( 0.172549, 0.172549, 0.172549, 1 )
custom_colors/clear_button_color = Color( 0.172549, 0.172549, 0.172549, 1 )
custom_colors/font_color_uneditable = Color( 0.172549, 0.172549, 0.172549, 1 )
custom_fonts/font = ExtResource( 3 )
custom_styles/read_only = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
align = 1

[node name="OkButton" parent="Pivot/MarginContainer/Layout/Content" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 388.0
margin_right = 448.0
margin_bottom = 60.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "HIDE"
anims/HIDE = SubResource( 4 )
anims/RESET = SubResource( 5 )
anims/SHOW = SubResource( 6 )
